Refactor/fixes after review (#15)
* chore: refactor

* feat: global exception handler

* refactor: package cleanup

* refactor: given when then in tests

* refactor: refactor purchase service because it was ugly